@@ -1,3 +1,7 @@
+* 2012-08-24 - jan.bauerdick@open-xchange.com
+
+ - Fix for bug 22838: New implementation of com.openexchange.sessiond.impl.SessionHandler.merge
+
 * 2012-08-20 - thorben.betten@open-xchange.com
 
  - Fix for bug 22819: Set category to USER_INPUT for invalid or rejected Internet addresses
